<resources>
    <string name="app_name">Popcorn Bookings</string>

    <!-- Menu Strings: -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="ticket">Ticket</string>
    <string name="settings">Settings</string>
    <color name="item_background">#118899</color>


    <string name="genre_caps">GENRE</string>
    <string name="genre_caption">Genre:</string>
    <string name="release_date_caption">Release Date:</string>
    <string name="rating_caption">Rating:</string>
    <string name="movie_title_caps">MOVIE TITLE</string>
    <string name="release_date_caps">RELEASE DATE</string>
    <string name="score_caption">Score:</string>
    <string name="rating_caps">RATING</string>

    <!-- Movie Details: -->
    <string name="trailer_caption">Trailer:</string>
    <string name="cast_caption">Cast:</string>
    <string name="cast_caps">CAST</string>
    <string name="director_caption">Director:</string>
    <string name="director_caps">DIRECTOR</string>
    <string name="synopsis_caps">SYNOPSIS</string>
    <string name="synopsis_caption">Synopsis:</string>
    <string name="runtime_caps">RUNTIME</string>
    <string name="date_caps">DATE</string>

    <string name="select_showtime_caption">Select a showtime:</string>
    <string name="r_reclining_seats">R - Reclining Seats</string>
    <string name="h_handicap">H - Handicap</string>
    <string name="please_select_the_desired_seat">Please select the desired seat</string>
    <string name="title_activity_maps">MapsActivity</string>

    <!-- Ticket View -->
    <!-- "@strings/moviedetails_????" -->
    <string name="qr_code">qr_code</string>
    <string name="digital_ticket">Digital Ticket</string>
    <string name="please_display_this_ticket_upon_arrival">Please display this ticket upon arrival</string>
</resources>