<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/Search"
        android:icon="@drawable/ic_baseline_theaters_24"
        android:title="@string/search" />

<!--    <item-->
<!--        android:id="@+id/placeholder"-->
<!--        android:title="" />-->

    <item
        android:id="@+id/Profile"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/Ticket"
        android:icon="@drawable/ic_baseline_airplane_ticket_24"
        android:title="@string/ticket" />

    <item
        android:id="@+id/Settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />

</menu>